# mle_applications

./: .gitignore
Algorithms/Colloaborative_Filtering/: README.txt  _DS_Store
Algorithms/EM_Algorithm/: EM Algorithm-Copy1.ipynb
Algorithms/MLE/: Untitled.ipynb
Algorithms/bayesian_optimization/: README.md
Algorithms/gradient_boosting/: Gradient Boosting.ipynb
Algorithms/llm/: README.md  pyproject.toml
Algorithms/llm/scripts/: attention_refresher.ipynb  transformer_blocks.ipynb
Algorithms/llm/src/: README.md  pyproject.toml
Algorithms/llm/src/llm/data/: lmdataloader.py  lmdataset.py
Algorithms/llm/src/llm/data/tests/: test_lmdataloader.py  test_lmdataset.py
Algorithms/reinforcement_learning/: frozenlake_policy_learning.py
Algorithms/seasonality/: FSI functions.ipynb  _DS_Store  seasonality.ipynb
Algorithms/tools/: asyncio_parallel.py  dag_execution.py  (+3 more)
Challenges/: googleDoodle_ConvNets alias
Colloaborative_Filtering/: Colloborative Filtering Matrix Decomposition.ipynb
EM_Algorithm/: EM Algorithm.ipynb
Reads and Resources/: importantReads.txt
googleDoodle_ConvNets/: Conv32-FastBenchmark.ipynb  Conv64-Temp.ipynb  Conv64.ipynb  Conv64_DataGen-32BanchmarkComparison.ipynb  Final_1.ipynb  Final_2_Additional_Inputs_Features_4Cont_1Country.ipynb  Final_2_Additional_Inputs_NumStrokes_Country.ipynb  Final_2_Additional_Inputs_NumStrokes_Country_High_Dims.ipynb  README.txt  Temp-MakeSmallerData.ipynb  googleDoodle_2.ipynb  googleDoodle_4.ipynb  googleDoodle_5.ipynb  googleDoodle_6.ipynb
python_helpers_git/: README.md
sql/: window_running_sum.sql
(+67 files in other folders)
